--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,11 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material:material:1.1.1'
+
+
+    testImplementation 'io.mockk:mockk:1.10.5'
+    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
